# nuvio

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/clone/: clone.py
backend/app/fallback/: fallback.py
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: error.tsx  layout.tsx  page.tsx
frontend/src/components/: content.tsx  error.tsx  footer.tsx  form.tsx  landing.tsx  navigation.tsx  provider.tsx
frontend/src/types/: index.ts
