[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.2",
    "google-generativeai>=0.3.2",
    "Pillow>=10.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.1",
]
